Changed background color

--- a/style.css
+++ b/style.css
@@ -2963,7 +2963,8 @@ figcaption {
 
 .home-hero-section {
     /* background-color: #e6dff1 */;
-    background-color: #bde5fe;
+    /* background-color: #bde5fe; */;
+    background-color: #ffd7e7;
 }
 
 .home-hero-component {
